objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>Book_Author__c</fullName>
        <label>Book Author</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Layout_Text_del_del__c</fullName>
        <label>Layout Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_for_book__c</fullName>
        <label>URL for book</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Universal_text_del__c</fullName>
        <label>Universal text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Book</label>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <recordTypes>
        <fullName>Foreign_Author</fullName>
        <active>true</active>
        <label>Foreign Author</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local_Author</fullName>
        <active>true</active>
        <label>Local Author</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>